<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Quizzy</string>
    <string name="start_button_all_label">START\n(# questions)</string>
    <string name="start_button_limited_label">START\n(@ of # questions)</string>
    <string name="start_button_empty_label">No questions selected</string>
    <string name="sample_number">0</string>
    <string name="total">TOTAL</string>
    <string name="sample_text">Sample text</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect_answer">Wrong</string>
    <string name="questions_left">Questions left:</string>
    <string name="incorrect_answers">Incorrect answers:</string>
    <string name="diff_level_desc_all">All questions</string>
    <string name="diff_level_desc_75" tools:ignore="StringFormatInvalid">Questions with less than 75% correct answers</string>
    <string name="diff_level_desc_50" tools:ignore="StringFormatInvalid">Questions with less than 50% correct answers</string>
    <string name="diff_level_desc_25" tools:ignore="StringFormatInvalid">Questions with less than 25% correct answers</string>
    <string name="diff_level_desc_0" tools:ignore="StringFormatInvalid">Unanswered questions only</string>
    <string name="summary">Summary</string>
    <string name="repeat">Repeat</string>
    <string name="action_finish">Finish</string>
    <string name="action_settings">Settings</string>
    <string name="pref_quiz_size_title">Quiz size</string>
    <string name="pref_quiz_size_summary">Number of questions in a single quiz</string>
    <string name="pref_quiz_size_value_all">All questions</string>

</resources>
