<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left|top"
             android:layout_margin="10dp"
             tools:context=".QuestionActivity"
             tools:ignore="MergeRootFrame">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_left"
                    android:id="@+id/correctCountLabel"
                    android:padding="2dp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/sample_number"
                    android:id="@+id/questionsLeftNumberTextField"
                    android:padding="2dp"/>
            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_finish"
                    android:id="@+id/finishButton"
                    android:layout_weight="1"
                    android:minHeight="0dp"/>

        </LinearLayout>

    <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="#ffffffa4"
            android:textStyle="bold"/>
    <ScrollView
            android:id="@+id/questionScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#ffffffd4">

            <TextView
                    android:id="@+id/questionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

        </ScrollView>


        <ScrollView
                android:id="@+id/answerScrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:background="#ffd9fcff">

            <TextView
                    android:id="@+id/answerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

        </ScrollView>



         <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
            <Button
                    android:id="@+id/correctAnswerButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/correct_answer"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"/>
            <Button
                    android:id="@+id/wrongAnswerButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/incorrect_answer"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>

</LinearLayout>
