<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="pl.jahu.quizzy.ui.QuizActivity.SetupFragment">

    <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
                android:id="@+id/totalCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total"
                android:id="@+id/categoryNameLabel"
                android:layout_toRightOf="@+id/totalCheckbox"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/totalCountLabel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sample_number"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"/>
    </RelativeLayout>

    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/difficultBar"
            android:max="4"
            android:progress="0"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/difficultInfoLabel"
            android:layout_weight="1" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/start_button_empty_label"
            android:id="@+id/startQuizButton"
            android:layout_weight="2"
            android:enabled="false"/>


</LinearLayout>
